# ryoshi-lang

./: .gitignore  README.md  compiler.pde  context.pde  error.pde  exeConfig.pde  function.pde  lexer.pde  object.pde  parser.pde  pyproject.toml  ryoshi.pde  tokenes.pde  ui.pde  ui_compinents.pde  ui_console.pde  ui_editor.pde  ui_header.pde  ui_result.pde  ui_right.pde
data/: ryoshiLibrary.py  test.txt
data/Samples/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
