[project]
name = "ryoshi"
version = "0.1.0"
description = "Python runtime for the Ryoshi Processing project"
requires-python = ">=3.11,<3.12"
dependencies = [
  "matplotlib>=3.9",
  "scipy>=1.14",
  "qiskit<1",
  "qiskit-aer<1",
  "qiskit-ibmq-provider<1",
  "pylatexenc>=2.10",
  "setuptools>=75",
]

[tool.uv]
package = false
